--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(Cramer_s_Rule)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Cramer_s_Rule main.cpp)
+add_executable(Cramer_s_Rule main.cpp
+        Matrix.cpp
+        Matrix.h)
