--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,6 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_executable(Cramer_s_Rule main.cpp
         Matrix.cpp
-        Matrix.h)
+        Matrix.h
+        SystemOfEquations.cpp
+        SystemOfEquations.h)
